solve some errors in overflowing and images size

--- a/src/index.css
+++ b/src/index.css
@@ -112,3 +112,7 @@ hr {
   border: none;
   height: 2px;
 }
+
+.faded {
+  margin: 25px 0;
+}
